--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .square {
     height: 2.5rem;
     width: 2.5rem;
-    background-color: white;
+    background-color: green;
     display: inline-block;
 
 }
